--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,8 @@
     <main>
             <div class="volunteer">
             <h1>Thank You!</h1>
-            <p>We will be sending you a reminder when time gets close thanks again.</p>
+            <p>We will contact you to answer your questions or concerns as soon as possible.</p>
+            <p>You are welcome to find answers to your most frequent questions on the site.</p>
             </div>
             <footer>
                     <div class="footer">
