--- a/newsletter.html
+++ b/newsletter.html
@@ -54,7 +54,7 @@
     <main>
             <div class="volunteer">
             <h1>Thank You!</h1>
-            <p></p>
+            <p>Thank you for signing up for the PTA newsletter, you will be reveiving it the first few days of the month.</p>
             </div>
             <footer>
                     <div class="footer">
