--- a/volunteer.html
+++ b/volunteer.html
@@ -54,7 +54,8 @@
     <main>
         <div class="volunteer">
         <h1>Thank You!</h1>
-        <p>We will be sending you a reminder when time gets close thanks again.</p>
+        <p>Thank you for volunteering at our school. We will record your hours in our system.</p>
+        <p>If you need to check your hours, please send us a message.</p>
         </div>
         <footer>
                 <div class="footer">
