--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                     <a href="">Art Volunteers</a>
                     <a href="">School T-Shirts</a>
                     <a href="">Skyward</a>
-                    <a href="">Teacher & Supply</a>
                     <a href="">Volunteer Hours</a>
-                    <a href="">Reimbursement Form</a>
                 </div>
                 </div>
                 <div class="dropdown">
@@ -63,7 +61,7 @@
         <a href="morenews.html"><input type="submit" name="submit" value="More News" class="submit"></a>
     </div>
     <div>
-        <h2>Log In Your Volunteer Hours</h2>
+        <h2>Volunteer Hours</h2>
     </div>
     <div class="hours">
         <p>PTA volunteer hours below. We recommned you enter your hours at the end of each month<p>
@@ -79,7 +77,7 @@
         </div>
             <input type="submit" form="form3">
         </form>
-        <h2>Contact The PTA</h2>
+        <h2>Contact PTA</h2>
         <form action="contact.html" id="form2"></form>
         <div class="contact">
             <label for="name">Name</label>
